syntax = "proto3";

option csharp_namespace = "HrAspire.Employees.Web";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

package employees;

service Documents {
	rpc ListEmployeeDocuments(ListEmployeeDocumentsRequest) returns (ListEmployeeDocumentsResponse);
	rpc Get(GetDocumentRequest) returns (GetDocumentResponse);
	rpc GetUrlAndFileName(GetDocumentUrlAndFileNameRequest) returns (GetDocumentUrlAndFileNameResponse);
	rpc Create(CreateDocumentRequest) returns (CreateDocumentResponse);
	rpc Update(UpdateDocumentRequest) returns (google.protobuf.Empty);
	rpc Delete(DeleteDocumentRequest) returns (google.protobuf.Empty);
}

message ListEmployeeDocumentsRequest {
	string employeeId = 1;
	int32 pageNumber = 2;
	int32 pageSize = 3;
	google.protobuf.StringValue managerId = 4;
}

message GetDocumentRequest {
	int32 id = 1;
	google.protobuf.StringValue managerId = 2;
}

message ListEmployeeDocumentsResponse {
	repeated DocumentModel documents = 1;
	int32 total = 2;
}

message GetDocumentResponse {
	DocumentDetailsModel document = 1;
}

message DocumentModel {
	int32 id = 1;
	string title = 2;
	string fileName = 3;
    string createdById = 4;
	google.protobuf.Timestamp createdOn = 5;
}

message DocumentDetailsModel {
	int32 id = 1;
	string employeeId = 2;
	string title = 3;
	google.protobuf.StringValue description = 4;
	string fileName = 5;
	google.protobuf.Timestamp createdOn = 6;
	string createdById = 7;
	string createdByFullName = 8;
}

message CreateDocumentRequest {
	string employeeId = 1;
	string title = 2;
	google.protobuf.StringValue description = 3;
	bytes fileContent = 4;
	string fileName = 5;
	string createdById = 6;
}

message CreateDocumentResponse {
 	int32 id = 1;
}

message UpdateDocumentRequest {
	int32 id = 1;
	string title = 2;
	google.protobuf.StringValue description = 3;
	google.protobuf.BytesValue fileContent = 4;
	google.protobuf.StringValue fileName = 5;
	string currentEmployeeId = 6;
}

message DeleteDocumentRequest {
	int32 id = 1;
	string currentEmployeeId = 2;
}

message GetDocumentUrlAndFileNameRequest {
	int32 id = 1;
	google.protobuf.StringValue managerId = 2;
}

message GetDocumentUrlAndFileNameResponse {
	string url = 1;
	string fileName = 2;
}
